docs-archive/apache-airflow-providers-alibaba/1.0.0/_sources/_api/airflow/providers/alibaba/cloud/hooks/oss/index.rst.txt
:py:mod:`airflow.providers.alibaba.cloud.hooks.oss`
===================================================

.. py:module:: airflow.providers.alibaba.cloud.hooks.oss


Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   airflow.providers.alibaba.cloud.hooks.oss.OSSHook



Functions
~~~~~~~~~

.. autoapisummary::

   airflow.providers.alibaba.cloud.hooks.oss.provide_bucket_name
   airflow.providers.alibaba.cloud.hooks.oss.unify_bucket_name_and_key



Attributes
~~~~~~~~~~

.. autoapisummary::

   airflow.providers.alibaba.cloud.hooks.oss.T


.. py:data:: T
   

   

.. py:function:: provide_bucket_name(func: T) -> T

   Function decorator that unifies bucket name and key taken from the key
   in case no bucket name and at least a key has been passed to the function.


.. py:function:: unify_bucket_name_and_key(func: T) -> T

   Function decorator that unifies bucket name and key taken from the key
   in case no bucket name and at least a key has been passed to the function.


.. py:class:: OSSHook(region, oss_conn_id='oss_default', *args, **kwargs)

   Bases: :py:obj:`airflow.hooks.base.BaseHook`

   Interact with Alibaba Cloud OSS, using the oss2 library.

   .. py:attribute:: conn_name_attr
      :annotation: = alibabacloud_conn_id

      

   .. py:attribute:: default_conn_name
      :annotation: = oss_default

      

   .. py:attribute:: conn_type
      :annotation: = oss

      

   .. py:attribute:: hook_name
      :annotation: = OSS

      

   .. py:method:: get_conn(self) -> airflow.models.connection.Connection

      Returns connection for the hook.


   .. py:method:: parse_oss_url(ossurl: str) -> tuple
      :staticmethod:

      Parses the OSS Url into a bucket name and key.

      :param ossurl: The OSS Url to parse.
      :rtype ossurl: str
      :return: the parsed bucket name and key
      :rtype: tuple of str


   .. py:method:: object_exists(self, key: str, bucket_name: Optional[str] = None) -> bool

      Check if object exists.

      :param key: the path of the object
      :type key: str
      :param bucket_name: the name of the bucket
      :type bucket_name: str
      :return: True if it exists and False if not.
      :rtype: bool


   .. py:method:: get_bucket(self, bucket_name: Optional[str] = None) -> oss2.api.Bucket

      Returns a oss2.Bucket object

      :param bucket_name: the name of the bucket
      :type bucket_name: str
      :return: the bucket object to the bucket name.
      :rtype: oss2.api.Bucket


   .. py:method:: load_string(self, key: str, content: str, bucket_name: Optional[str] = None) -> None

      Loads a string to OSS

      :param key: the path of the object
      :type key: str
      :param content: str to set as content for the key.
      :type content: str
      :param bucket_name: the name of the bucket
      :type bucket_name: str


   .. py:method:: upload_local_file(self, key: str, file: str, bucket_name: Optional[str] = None) -> None

      Upload a local file to OSS

      :param key: the OSS path of the object
      :type key: str
      :param file: local file to upload.
      :type file: str
      :param bucket_name: the name of the bucket
      :type bucket_name: str


   .. py:method:: download_file(self, key: str, local_file: str, bucket_name: Optional[str] = None) -> Optional[str]

      Download file from OSS

      :param key: key of the file-like object to download.
      :type key: str
      :param local_file: local path + file name to save.
      :type local_file: str
      :param bucket_name: the name of the bucket
      :type bucket_name: str
      :return: the file name.
      :rtype: str


   .. py:method:: delete_object(self, key: str, bucket_name: Optional[str] = None) -> None

      Delete object from OSS

      :param key: key of the object to delete.
      :type key: str
      :param bucket_name: the name of the bucket
      :type bucket_name: str


   .. py:method:: delete_objects(self, key: list, bucket_name: Optional[str] = None) -> None

      Delete objects from OSS

      :param key: keys list of the objects to delete.
      :type key: list of str
      :param bucket_name: the name of the bucket
      :type bucket_name: str


   .. py:method:: delete_bucket(self, bucket_name: Optional[str] = None) -> None

      Delete bucket from OSS

      :param bucket_name: the name of the bucket
      :type bucket_name: str


   .. py:method:: create_bucket(self, bucket_name: Optional[str] = None) -> None

      Create bucket

      :param bucket_name: the name of the bucket
      :type bucket_name: str


   .. py:method:: get_credential(self) -> oss2.auth.Auth



